--- a/firstGitPush.html
+++ b/firstGitPush.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form action="url">
+        <label for="firstName">first name</label> <br>
+        <input type="text" id="firstName" name="firstName"> <br>
+        <label for="lastName"> last name</label> <br>
+        <input type="text" id="lastName" name="lastName"> <br>
+        <button> submit </button>
+    </form>
 </body>
 </html>
