--- a/lesson3.html
+++ b/lesson3.html
@@ -7,11 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
-        <label for="">Full Name</label>
-        <input type="text">
-        <label for="">Email</label>
-        <input type="email">
+    <form action="URL" method="get">
+        <label for="FullName">Full Name</label><br>
+        <input type="text" id="FullName" name="FullName"> <br>
+        <label for="email">Email</label><br>
+        <input type="email" id="email" name="email"><br>
+        <input type="submit">
     </form>
+    <form action=""></form>
 </body>
 </html>
